# Enterprise-AI-Insurance-Assistant

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  techstack.md
app/: main.py
app/api/: __init__.py  ask.py  auth.py  logs.py  tools.py
app/auth/: __init__.py  deps.py  tokens.py  users.py
app/bedrock/: __init__.py  agent.py  config.py  fallback.py  orchestrator.py  runner.py  tool_payload.py  tool_specs.py
app/db/: __init__.py  connection.py  health.py
app/guardrails/: __init__.py  rules.py
app/logging/: __init__.py  audit.py
app/rbac/: __init__.py  check.py
app/semantic/: __init__.py  loader.py  models.py  resolver.py
app/semantic/concepts/: claim_summary.yaml  coverage_by_type.yaml  customer_policies.yaml  open_claims.yaml  policy_premium.yaml
db/: generate_seed.py  schema.sql  seed.sql
docs/: README.md  techstack.md
docs/features/: 01-project-scaffold.md  02-database-rds.md  03-semantic-layer.md  04-security-envelope.md  05-bedrock-ask.md  06-react-ui.md
docs/superpowers/specs/: 2026-07-18-phase3-security-envelope-design.md  2026-07-18-phase4-bedrock-ask-design.md  2026-07-18-phase5-react-ui-design.md
frontend/: .env.example  README.md  index.html  vite.config.js
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/auth/: session.js
infra/: rds-notes.md
infra/bedrock/: notes.md
tests/: test_agent.py  test_ask.py  test_auth.py  test_db.py  test_fallback.py  test_guardrails.py  test_health.py  test_logs.py  test_rbac.py  test_runner.py  test_semantic.py  test_tool_payload.py  test_tools.py
(+12 files in other folders)
