[project]
name = "semantic-layer"
version = "0.1.0"
description = "Enterprise AI Insurance Assistant POC — FastAPI + Bedrock + Semantic Layer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "psycopg[binary]>=3.3.4",
    "psycopg-pool>=3.3.1",
    "pyyaml>=6.0.3",
    "boto3>=1.43.51",
]

[dependency-groups]
dev = [
    "faker>=40.31.0",
    "httpx>=0.27.0",
    "httpx2>=2.7.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
